# command_organiser

./: Cargo.toml  Readme.md  commands.toml
src/: main.rs
src/cli/: mod.rs
src/model/: command.rs
src/service/: command_service.rs  mod.rs
src/storage/: command_storage.rs  mod.rs
src/ui/: app.rs  tui.rs
