[package]
name = "command_organiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
ratatui = "0.20.1"
thiserror = "1.0.40"
tracing = "0.1.37"
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
unicode-width = "0.1.10"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.28.0", features = ["full"] }
serial_test = "2.0.0"
clipboard = "0.5.0"
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
